<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="40px"
            android:text="@string/radioBlue" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="40px"
            android:text="@string/radioGreen" />

        <RadioButton
            android:id="@+id/radioPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:padding="40px"
            android:text="@string/radioPink" />

        <RadioButton
            android:id="@+id/radioLightBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:padding="40px"
            android:text="@string/radioYellow" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100px"
            android:layout_marginBottom="100px"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#3C3C3C"
            android:ems="10"
            android:hint="@string/editText"
            android:inputType="textPersonName"
            android:minHeight="300px"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#C6C6C6" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:layout_weight="0"
            android:background="#3C3C3C"
            android:minHeight="200px"
            android:onClick="onClick"
            android:text="@string/button"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RadioGroup>
</LinearLayout>